update: initial value

--- a/www/index.html
+++ b/www/index.html
@@ -11,8 +11,8 @@
       const wsURL = 'ws://' + hostName + ':9090';
       const divStatus = document.getElementById('status');
       const checkBtn = document.getElementById('checkBtn');
-      var speedvalue;
-      var currentDir;
+      var speedvalue = "min";
+      var currentDir = "C";
       // joy
       var joy = new JoyStick('joyDiv');
       var joyIinputPosX = document.getElementById("joyPosizioneX");
