update: button size

--- a/www/index.html
+++ b/www/index.html
@@ -176,8 +176,8 @@
     Y :<input id="joyY" type="text" />
   </div>
   <form id="checkBtn">
-    <input type="radio" name="speed" value="max">MAX SPEED
-    <input type="radio" name="speed" value="min" checked>MIN SPEED
+    <input type="radio" name="speed" value="max" style="transform:scale(1.5);">MAX SPEED
+    <input type="radio" name="speed" value="min" style="transform:scale(1.5);" checked>MIN SPEED
   </form>
 </body>
 
