--- a/www/index.html
+++ b/www/index.html
@@ -1,3 +1,6 @@
+<!-- SPDX-FileCopyrightText: 2018 Hiroto Horimoto -->
+<!-- SPDX-License-Identifier: BSD-3-Clause -->
+
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
